project info updated

--- a/about.html
+++ b/about.html
@@ -39,13 +39,13 @@
 					<section id="two">
 						<h2>Favorite Authors</h2>
 						<div class="column">
-							<article class="6u 12u$(xlarge) work-item">
-							<ul class="icons">
+							<article class="6u 12u$(xsmall) work-item">
+							<ol class="icons">
 								<li><a href="">JK Rowling</a></li>
 								<li><a href="">Douglas Adams</a></li>
 								<li><a href="">George Orwell</a></li>
 								<li><a href="">Dale Carnegie</a></li>
-							</ul>
+							</ol>
 							</article>
 						</div>
 					</section>
@@ -54,12 +54,12 @@
 					<section id="three">
 						<h2>Favorite Sports</h2>
 						<div class="column">
-							<article class="6u 12u$(xlarge) work-item">
-							<ul class="icons">
-								<li>Swimming</li>
-								<li>Soccer</li>
-								<li>Ping Pong</li>
-							</ul>
+							<article class="6u 12u$(xsmall) work-item">
+							<ol class="icons">
+								<li><b>Swimming</b></li>
+								<li><b>Soccer</b></li>
+								<li><b>Ping Pong</b></li>
+							</ol>
 							</article>
 						</div>
 					</section>
