--- a/index.html
+++ b/index.html
@@ -3,108 +3,137 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Moaaz Elsayed</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	</head>
-	<body id="top">
+<head>
+	<title>Moaaz Elsayed</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+</head>
+<body id="top">
 
-		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>My name's Moaaz.</strong> I make some cool stuff...<br />
-					But of course, I'll leave that for you to decide! <br />
-					While you're here, check out my <a href="https://github.com/moaazelsayed">GitHub</a> account and my <a href="Moaaz Resume.pdf">Resume</a>.</h1>
-				</div> 
-			</header>
+	<!-- Header -->
+	<header id="header">
+		<div class="inner">
+			<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+			<h1><strong>My name's Moaaz.</strong> I work on cool projects...<br />
+				But of course, I'll leave that for you to decide! <br />
+				While you're here, check out my <a href="https://github.com/moaazelsayed">GitHub</a> account and my <a href="Moaaz Resume.pdf">Resume</a>.</h1>
+			</div> 
+		</header>
 
 		<!-- Main -->
-			<div id="main">
+		<div id="main">
 
-				<!-- One -->
-					<section id="one">
-						<header class="major">
-							<h2>Where do I start?<br />
-							Well, When I was born...</h2>
-						</header>
-						<p>When I was born, in the great and majestic mountains of Tuholok, a very unique and magical phenomenon occurred; It was foretold that it only happens once in a million years when a gifted child is born. Unfortunately, the gifted child was my neighbor who was also born on the same day. Jokes and stories aside, I'm a normal (somewhat creative) kid who has a strong knack for electrical &amp; mechanical gadgets (Robots!) and a love for outter space and space exploration. Growing up, I always wondered how things were made from radios to microwaves, which resulted in almost every object in my house taken apart and (and some) put back together... most of the time without the slightest clue of how it works. As I got older I got introduced to the all famous "Interwebs" and online tutorials which helped in the advancement of my knowledge of how things worked and their creation. Anyways, without me blabbing too much, I've listed some of my creations below. Check them out! 
-							<ul class="actions">
+			<!-- One -->
+			<section id="one">
+				<header class="major">
+					<h2>Where do I start?<br />
+						Well, When I was born...</h2>
+					</header>
+					<p>When I was born, in the great and majestic mountains of Tuholok, a very unique and magical phenomenon occurred; It was foretold that it only happened once in a million years, when a gifted child is born. Unfortunately, that gifted child was my neighbor who was also born on the same day. Jokes and stories aside, I'm a normal (somewhat creative) kid who has a strong knack for electrical &amp; mechanical gadgets (Robots!) and a love for outter space and space exploration. Growing up, I always wondered how things were made from radios to microwaves, which resulted in almost every object in my house taken apart and (and some) put back together... most of the time without the slightest clue of how it works. As I got older I got introduced to the all famous "Interwebs" and online tutorials which helped in the advancement of my knowledge of how things worked and their creation. Anyways, without me blabbing too much, I've listed some of my creations below. Check them out! 
+						<ul class="actions">
 							<li><a href="about.html" class="button">More about me...</a></li>
 						</ul>
 					</section>
 
-				<!-- Two -->
+					<!-- Two -->
 					<section id="two">
-						<h2>Projects (AKA "The cool stuff")</h2>
+						<h2>Projects!</h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Serenity VR</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>NASA SpaceApps Challenge - Serenity VR</h3>
+								<p>Won <b>1st place</b> (Best use of hardware) in Waterloo's regional SpaceApps Hackathon and became a <b>Global Nominee</b>. SerenityVR was created to take the astronaut away from the confined spaces that they're faced with everyday as part of space travel. Spaceflight is known to create both physical and psychological damages to the body. With SerenityVR, we are aiming to reduce these damages through Earth-like sensory + physical activities. Project's website can be found <a href="https://2016.spaceappschallenge.org/challenges/mars/space-recreation/projects/serenityvr"><b>here</b></a>.
+								</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
 								<h3>Unibo One-Wheeled Self Balancing Vehicle</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Invented and led project in the design and build of a one wheeled self-balancing vehicle for Capstone.
+									This project utilized control theory in the design of lateral and longitudinal balancing systems for a one
+									wheeled board. Team consisted of 6 members from different faculties to accomplish this task. Check out my code <a href="https://github.com/moaazelsayed/Unibo"><b>here</b></a>.
+								</p>
+							</article>
+							<article class="6u 12u$(xsmall) work-item">
+								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
+								<h3>PID Controller for aircraft (Navion)</h3>
+								<p>Group won <b>3rd place</b> in a class wide project competition. The main objective of this project was the development of a controller for an aircraft autopilot system. This includes the detailing, design, analysis, and simulation of the system through MatLab's Simulink.
+								</p>
+							</article>
+							<article class="6u$ 12u$(xsmall) work-item">
+								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
+								<h3>Windsor Engineering Competition - Impact Structure</h3>
+								<p>Group won <b>1st Place</b>. Went on to <b>Province Wide Competition</b>. In this competition, engineering students are faced with several real world engineering problems that range from bridge construction, displacement of fluids under certain conditions, to the design and building of a
+									front-end vehicle impact system. Students are then forced to use engineering concepts to build devices
+									that would incorporate solutions.
+								</p>
 							</article>
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 								<h3>Self-Charging Heating Insoles</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>A product had to be invented that could be applied to a real world market. Kinetic Rechargeable
+									Heating Insoles were invented in this project. Parts of this project included finding the market,
+									feasibility, each machining / manufacturing process, bill of material (BOM), floor plan,
+									business plan, and overall company structure.
+								</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>CoffeeQuick Portable coffee maker</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Quick Coffee Portable coffee maker</h3>
+								<p> Team won <b>Viewers Choice Award</b> in the <b>BlueSky Competition</b>. Quick Coffee is a portable electric hot drink maker that can produce a hot beverage within minutes. It will provide coffee or any other hot beverage to go as long as water and coffee/pods pods are available. Check out the news page <a href="http://www.epicentreuwindsor.ca/2015-uwill-discover-undergraduate-research-conference-winners/"><b>here</b></a>. And our youtube <a href="https://www.youtube.com/watch?v=NOEuq_EK020"><b>here</b></a>.
+								</p>
 							</article>
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>FIRST Robotics Competition</h3>
+								<p>Won <b>Outstanding Contribution Award</b>. In this project, several components such as gears, motors, servos and several other devices were used to
+									build a remote controlled robot. This robot was programmed to compete in a country wide
+									competition involving different obstacles. A plaque was received for extraordinary work.
+								</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Mechatronics Autonomus Track Race</h3>
+								<p>Tied <b>1st Place</b> in a class wide competition. This project required the design and build of an autonomus vehicle programmed with PBASIC on a STAMP BS2.
+								</p>
 							</article>
 						</div>
+						<!--
 						<ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
 						</ul>
-					</section>
+					-->
+				</section>
 
 				<!-- Three -->
-					<section id="three">
-						<h2>Get In Touch</h2>
-						<p>Need to get in touch to collaborate on a project or for anything else? Drop me a line!</p>
-						<div class="row">
-							<div class="8u 12u$(small)">
-								<form method="post" action="#">
-									<div class="row uniform 50%">
-										<div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
-										<div class="6u$ 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										<div class="12u$"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-									</div>
-								</form>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</div>
-							<div class="4u$ 12u$(small)">
-								<ul class="labeled-icons">
-									<li>
-										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="#">elsayedm@uwindsor.ca</a>
-									</li>
-								</ul>
-							</div>
+				<section id="three">
+					<h2>Get In Touch</h2>
+					<p>Need to get in touch to collaborate on a project or for anything else? Drop me a line!</p>
+					<div class="row">
+						<div class="8u 12u$(small)">
+							<form method="post" action="#">
+								<div class="row uniform 50%">
+									<div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
+									<div class="6u$ 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
+									<div class="12u$"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
+								</div>
+							</form>
+							<ul class="actions">
+								<li><input href="email" type="submit" value="Send Message" /></li>
+							</ul>
 						</div>
-					</section>
+						<div class="4u$ 12u$(small)">
+							<ul class="labeled-icons">
+								<li>
+									<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
+									<a href="#">elsayedm@uwindsor.ca</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</section>
 
 				<!-- Four -->
 				<!--
@@ -428,12 +457,14 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 			</div>
 
-		<!-- Footer -->
+			<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
 						<li><a href="index.html" class="icon fa-globe"><span class="label">Main Page</span></a></li>
 						<li><a href="Moaaz Resume.pdf" class="icon fa-file-o"><span class="label">Resume</span></a></li>
+						<li><a href="https://ca.linkedin.com/in/moaaze" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://ca.linkedin.com/in/moaaze" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/moaazelsayed" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="contact.html" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
@@ -443,7 +474,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				</div>
 			</footer>
 
-		<!-- Scripts -->
+			<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.poptrox.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
@@ -451,5 +482,5 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 
-	</body>
-</html>
+		</body>
+		</html>
