--- a/about.html
+++ b/about.html
@@ -3,91 +3,93 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Moaaz Elsayed</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	</head>
-	<body id="top">
+<head>
+	<title>Moaaz Elsayed</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+</head>
+<body id="top">
 
-		<!-- Header -->
-			<header id="header">
+	<!-- Header -->
+	<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>My name's Moaaz.</strong> I make some cool stuff...<br />
-					But of course, I'll leave that for you to decide! <br />
-					While you're here, check out my <a href="https://github.com/moaazelsayed">GitHub</a> account and my <a href="Moaaz Resume.pdf">Resume</a>.</h1>
-				</div> 
-			</header>
+			<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+			<h1><strong>My name's Moaaz.</strong> I work on cool projects...<br />
+				But of course, I'll leave that for you to decide! <br />
+				While you're here, check out my <a href="https://github.com/moaazelsayed">GitHub</a> account and my <a href="Moaaz Resume.pdf">Resume</a>.</h1>
+			</div> 
+		</header>
 
 		<!-- Main -->
-			<div id="main">
+		<div id="main">
 
-				<!-- One -->
-					<section id="one">
-						<header class="major">
-							<h2>A little about me.<br />
-							Where do I start? Well, When I was born...</h2>
-						</header>
-						<p>When I was born, in the great and majestic mountains of Tuholok, a very unique and magical phenomenon occurred; It was foretold that it only happens once in a million years when a gifted child is born. Unfortunately, the gifted child was my neighbor who was also born on the same day. Jokes and stories aside, I'm a normal (somewhat creative) kid who has a strong knack for electrical and mechanical gadgets. Growing up, I always wondered how things were made from radios to microwaves, which resulted in almost every object in my house taken apart and (and some) put back together... most of the time without the slightest clue of how it works. As I got older I got introduced to the all famous "Interwebs" and online tutorials which helped in the advancement of my knowledge of how things worked and their creation. Anyways, without me blabbing too much, I've listed some of my creations below. Check them out! 
+			<!-- One -->
+			<section id="one">
+				<header class="major">
+					<h2>A little about me.<br />
+						Where do I start? Well, When I was born...</h2>
+					</header>
+					<p>When I was born, in the great and majestic mountains of Tuholok, a very unique and magical phenomenon occurred; It was foretold that it only happens once in a million years when a gifted child is born. Unfortunately, the gifted child was my neighbor who was also born on the same day. Jokes and stories aside, I'm a normal (somewhat creative) kid who has a strong knack for electrical and mechanical gadgets. Growing up, I always wondered how things were made from radios to microwaves, which resulted in almost every object in my house taken apart and (and some) put back together... most of the time without the slightest clue of how it works. As I got older I got introduced to the all famous "Interwebs" and online tutorials which helped in the advancement of my knowledge of how things worked and their creation. Anyways, without me blabbing too much, I've listed some of my creations below. Check them out! 
 					</section>
 
-				<!-- Two -->
+					<!-- Two -->
 					<section id="two">
 						<h2>Favorite Authors</h2>
 						<div class="column">
 							<article class="6u 12u$(xsmall) work-item">
-							<ol class="icons">
-								<li><a href="">JK Rowling</a></li>
-								<li><a href="">Douglas Adams</a></li>
-								<li><a href="">George Orwell</a></li>
-								<li><a href="">Dale Carnegie</a></li>
-							</ol>
+								<ol class="icons">
+									<li><a href="">JK Rowling</a></li>
+									<li><a href="">Douglas Adams</a></li>
+									<li><a href="">George Orwell</a></li>
+									<li><a href="">Dale Carnegie</a></li>
+								</ol>
 							</article>
 						</div>
 					</section>
 
-				<!-- Three -->
+					<!-- Three -->
 					<section id="three">
 						<h2>Favorite Sports</h2>
 						<div class="column">
 							<article class="6u 12u$(xsmall) work-item">
-							<ol class="icons">
-								<li><b>Swimming</b></li>
-								<li><b>Soccer</b></li>
-								<li><b>Ping Pong</b></li>
-							</ol>
+								<ol class="icons">
+									<li><b>Swimming</b></li>
+									<li><b>Soccer</b></li>
+									<li><b>Ping Pong</b></li>
+								</ol>
 							</article>
 						</div>
 					</section>
 
-			</div>
-
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<ul class="icons">
-						<li><a href="index.html" class="icon fa-globe"><span class="label">Main Page</span></a></li>
-						<li><a href="Moaaz Resume.pdf" class="icon fa-file-o"><span class="label">Resume</span></a></li>
-						<li><a href="https://github.com/moaazelsayed" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="contact.html" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Moaaz Elsayed</li>
-					</ul>
 				</div>
-			</footer>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+				<!-- Footer -->
+				<footer id="footer">
+					<div class="inner">
+						<ul class="icons">
+							<li><a href="index.html" class="icon fa-globe"><span class="label">Main Page</span></a></li>
+							<li><a href="Moaaz Resume.pdf" class="icon fa-file-o"><span class="label">Resume</span></a></li>
+							<li><a href="https://ca.linkedin.com/in/moaaze" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://ca.linkedin.com/in/moaaze" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://github.com/moaazelsayed" class="icon fa-github"><span class="label">Github</span></a></li>
+							<li><a href="contact.html" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						</ul>
+						<ul class="copyright">
+							<li>&copy; Moaaz Elsayed</li>
+						</ul>
+					</div>
+				</footer>
 
-	</body>
-</html>
+				<!-- Scripts -->
+				<script src="assets/js/jquery.min.js"></script>
+				<script src="assets/js/jquery.poptrox.min.js"></script>
+				<script src="assets/js/skel.min.js"></script>
+				<script src="assets/js/util.js"></script>
+				<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+				<script src="assets/js/main.js"></script>
+
+			</body>
+			</html>
