--- a/contact.html
+++ b/contact.html
@@ -15,12 +15,12 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>My name's Moaaz.</strong> I make some cool stuff...<br />
-					But of course, I'll leave that for you to decide! <br />
-					While you're here, check out my <a href="https://github.com/moaazelsayed">GitHub</a> account and my <a href="Moaaz Resume.pdf">Resume</a>.</h1>
-				</div> 
+						<div class="inner">
+			<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+			<h1><strong>My name's Moaaz.</strong> I work on cool projects...<br />
+				But of course, I'll leave that for you to decide! <br />
+				While you're here, check out my <a href="https://github.com/moaazelsayed">GitHub</a> account and my <a href="Moaaz Resume.pdf">Resume</a>.</h1>
+			</div> 
 			</header>
 
 		<!-- Main -->
@@ -40,7 +40,7 @@
 									</div>
 								</form>
 								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
+									<li><input href="email.html" type="submit" value="Send Message" /></li>
 								</ul>
 							</div>
 							<div class="4u$ 12u$(small)">
@@ -61,6 +61,8 @@
 					<ul class="icons">
 						<li><a href="index.html" class="icon fa-globe"><span class="label">Main Page</span></a></li>
 						<li><a href="Moaaz Resume.pdf" class="icon fa-file-o"><span class="label">Resume</span></a></li>
+						<li><a href="https://ca.linkedin.com/in/moaaze" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://ca.linkedin.com/in/moaaze" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/moaazelsayed" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="contact.html" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
