file extention for images changed

--- a/email.html
+++ b/email.html
@@ -16,7 +16,7 @@
 	<!-- Header -->
 	<header id="header">
 		<div class="inner">
-			<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+			<a href="#" class="image avatar"><img src="images/avatar.JPG" alt="" /></a>
 			<h1><strong>My name's Moaaz.</strong> I work on cool projects...<br />
 				But of course, I'll leave that for you to decide! <br />
 				While you're here, check out my <a href="https://github.com/moaazelsayed">GitHub</a> account and my <a href="Moaaz Resume.pdf">Resume</a>.</h1>
