--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<!-- Header -->
 	<header id="header">
 		<div class="inner">
-			<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+			<a href="#" class="image avatar"><img src="images/avatar.JPG" alt="" /></a>
 			<h1><strong>My name's Moaaz.</strong> I work on cool projects...<br />
 				But of course, I'll leave that for you to decide! <br />
 				While you're here, check out my <a href="https://github.com/moaazelsayed">GitHub</a> account and my <a href="Moaaz Resume.pdf">Resume</a>.</h1>
@@ -103,7 +103,7 @@
 							</p>
 						</article>
 						<article class="6u 12u$(xsmall) work-item">
-							<a href="images/fulls/09.jpg" class="image fit thumb"><img src="images/thumbs/09.jpg" alt="" /></a>
+							<a href="images/fulls/09.jpg" class="image fit thumb"><img src="images/thumbs/09.JPG" alt="" /></a>
 							<h3>Innovation Design Project</h3>
 							<p>	In this project, an innovative/ cheap/ green trashcan had to be designed. This project included designing each component and their manufacturing system as well as their impact on different markets as well as the environment.
 							</p>
