--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 
 	<!-- Header -->
 	<header id="header">
-				<div class="inner">
+		<div class="inner">
 			<a href="#" class="image avatar"><img src="images/avatar.JPG" alt="" /></a>
 			<h1><strong>My name's Moaaz.</strong> I work on cool projects...<br />
 				But of course, I'll leave that for you to decide! <br />
@@ -29,67 +29,107 @@
 			<!-- One -->
 			<section id="one">
 				<header class="major">
-					<h2>A little about me.<br />
-						Where do I start? Well, When I was born...</h2>
-					</header>
-					<p>When I was born, in the great and majestic mountains of Tuholok, a very unique and magical phenomenon occurred; It was foretold that it only happens once in a million years when a gifted child is born. Unfortunately, the gifted child was my neighbor who was also born on the same day. Jokes and stories aside, I'm a normal (somewhat creative) kid who has a strong knack for electrical and mechanical gadgets. Growing up, I always wondered how things were made from radios to microwaves, which resulted in almost every object in my house taken apart and (and some) put back together... most of the time without the slightest clue of how it works. As I got older I got introduced to the all famous "Interwebs" and online tutorials which helped in the advancement of my knowledge of how things worked and their creation. Anyways, without me blabbing too much, I've listed some of my creations below. Check them out! 
-					</section>
+					<h2>A little about me!</h2>
+				</header>
+				<p>
+					“Seek knowledge from the cradle to the grave” Is one of the mottos that I live by; to know that there’s always something crazy to learn about is what always keeps me sane. I'm a creative guy who has a strong knack for coding, electrical and mechanical gadgets (Robots!) and a love for outer space and space exploration. I graduated from Mechanical Engineering in 2015, worked in software and machine simulation / game development and will be going back to school for a degree in Computer Science!</br>
 
-					<!-- Two -->
-					<section id="two">
-						<h2>Favorite Authors</h2>
-						<div class="column">
-							<article class="6u 12u$(xsmall) work-item">
-								<ol class="icons">
-									<li><a href="">JK Rowling</a></li>
-									<li><a href="">Douglas Adams</a></li>
-									<li><a href="">George Orwell</a></li>
-									<li><a href="">Dale Carnegie</a></li>
-								</ol>
-							</article>
-						</div>
-					</section>
-
-					<!-- Three -->
-					<section id="three">
-						<h2>Favorite Sports</h2>
-						<div class="column">
-							<article class="6u 12u$(xsmall) work-item">
-								<ol class="icons">
-									<li><b>Swimming</b></li>
-									<li><b>Soccer</b></li>
-									<li><b>Ping Pong</b></li>
-								</ol>
-							</article>
-						</div>
-					</section>
-
-				</div>
-
-				<!-- Footer -->
-				<footer id="footer">
-					<div class="inner">
-						<ul class="icons">
-							<li><a href="index.html" class="icon fa-globe"><span class="label">Main Page</span></a></li>
-							<li><a href="Moaaz Resume.pdf" class="icon fa-file-o"><span class="label">Resume</span></a></li>
-							<li><a href="https://ca.linkedin.com/in/moaaze" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://ca.linkedin.com/in/moaaze" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://github.com/moaazelsayed" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="contact.html" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Moaaz Elsayed</li>
-						</ul>
+					One of the coolest projects I have worked on was for a capstone graduation research project. I invented and led a team of 6 colleagues in the design and build of a one wheeled self-balancing vehicle (it can be seen on my website). This project utilized control theory in the design of lateral and longitudinal balancing systems for a one wheeled board.The main controller was an Arduino Uno that took feedback from gyroscope and accelerometer sensors on the 2 main axis based on the tilt of the board. The Arduino then corrected the angles by outputting the right amount of power to the main DC motor for the longitudinal system and the right tilt on rotating gyros for the lateral system. This project not only taught me about power distribution and programming Arduinos, but also about patience and leadership skills.
+				</p>
+				<header class="major">
+					<div class="row">
+						<article class="6u 12u(xlarge) work-item">
+							<a class="image fit thumb">
+								<img src="images/astro.jpg" alt="" />
+								<h2>This is me one day!!</h2>
+							</a>
+						</article>
 					</div>
-				</footer>
+				</header>
+			</section>
 
-				<!-- Scripts -->
-				<script src="assets/js/jquery.min.js"></script>
-				<script src="assets/js/jquery.poptrox.min.js"></script>
-				<script src="assets/js/skel.min.js"></script>
-				<script src="assets/js/util.js"></script>
-				<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-				<script src="assets/js/main.js"></script>
+			<!-- Two -->
+			<section id="two">
+				<h2>Favorite Authors</h2>
+				<div class="row">
+					<article class="6u$ 12u$(xsmall) work-item">
+						<ol class="icons">
+							<li>JK Rowling</li>
+							<li>Douglas Adams</li>
+							<li>George Orwell</li>
+							<li>Dale Carnegie</li>
+						</ol>
+					</article>
+				</div>
+			</section>
 
-			</body>
-			</html>
+			<!-- Three -->
+			<section id="three">
+				<h2>Favorite Sports</h2>
+				<div class="row">
+					<article class="6u$ 12u$(xsmall) work-item">
+						<ol class="icons">
+							<li><b>Swimming</b></li>
+							<li><b>Soccer</b></li>
+							<li><b>Ping Pong</b></li>
+							<li><b>Pool</b></li>
+							<li><b>Martial Arts (I've done Karate, Boxing and Tae Kwon Do)</b></li>
+						</ol>
+					</article>
+				</div>
+			</section>
+
+			<!-- Three -->
+			<section id="three">
+				<h2>And finally some pets!!!</h2>
+				<div class="row">
+					<article class="6u 12u(xlarge) work-item">
+						<ol class="icons">
+							<a class="image fit thumb">
+								<img src="images/bird.jpg" alt="" />
+								<h2>I love birds!</h2>
+							</a>
+							
+						</ol>
+					</article>
+					<article class="6u 12u(xlarge) work-item">
+						<ol class="icons">
+							<a class="image fit thumb">
+								<img src="images/birdRabbit.jpg" alt="" />
+								<h2>Sometimes they get along</h2>
+							</a>
+							
+						</ol>
+					</article>
+				</div>
+			</section>
+
+		</div>
+
+		<!-- Footer -->
+		<footer id="footer">
+			<div class="inner">
+				<ul class="icons">
+					<li><a href="index.html" class="icon fa-globe"><span class="label">Main Page</span></a></li>
+					<li><a href="Moaaz Resume.pdf" class="icon fa-file-o"><span class="label">Resume</span></a></li>
+					<li><a href="https://ca.linkedin.com/in/moaaze" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://ca.linkedin.com/in/moaaze" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://github.com/moaazelsayed" class="icon fa-github"><span class="label">Github</span></a></li>
+					<li><a href="contact.html" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+				</ul>
+				<ul class="copyright">
+					<li>&copy; Moaaz Elsayed</li>
+				</ul>
+			</div>
+		</footer>
+
+		<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.poptrox.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+		<script src="assets/js/main.js"></script>
+
+	</body>
+	</html>
