--- a/index.html
+++ b/index.html
@@ -485,12 +485,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="index.html" class="icon fa-globe"><span class="label">Main Page</span></a></li>
 						<li><a href="Moaaz Resume.pdf" class="icon fa-file-o"><span class="label">Resume</span></a></li>
 						<li><a href="https://ca.linkedin.com/in/moaaze" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://ca.linkedin.com/in/moaaze" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/moaazelsayed" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="contact.html" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Moaaz Elsayed</li>
+						<li>&copy; Moaaz Els<a href="Moaaz Elsayed Resume.pdf" >a</a>yed</li>
 					</ul>
 				</div>
 			</footer>
