added serenity vid

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<article class="6u 12u$(xsmall) work-item">
 							<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 							<h3>NASA SpaceApps Challenge - Serenity VR</h3>
-							<p>Won <b>1st place</b> (Best use of hardware) in Waterloo's regional SpaceApps Hackathon and became a <b>Global Nominee</b>. SerenityVR was created to take the astronaut away from the confined spaces that they're faced with everyday as part of space travel. Spaceflight is known to create both physical and psychological damages to the body. With SerenityVR, we are aiming to reduce these damages through Earth-like sensory + physical activities. Project's website can be found <a href="https://2016.spaceappschallenge.org/challenges/mars/space-recreation/projects/serenityvr"><b>here</b></a>. Check out the code <a href="https://github.com/serenityvr/SerenityVRProject1"><b>here</b></a>.
+							<p>Won <b>1st place</b> (Best use of hardware) in Waterloo's regional SpaceApps Hackathon and became a <b>Global Nominee</b>. SerenityVR was created to take the astronaut away from the confined spaces that they're faced with everyday as part of space travel. Spaceflight is known to create both physical and psychological damages to the body. With SerenityVR, we are aiming to reduce these damages through Earth-like sensory + physical activities. Project's website can be found <a href="https://2016.spaceappschallenge.org/challenges/mars/space-recreation/projects/serenityvr"><b>here</b></a>. Check out the code <a href="https://github.com/serenityvr/SerenityVRProject1"><b>here</b></a>. Here's a short <a href="Serenity.mp4"><b>video</b></a> as well!
 							</p>
 						</article>
 						<article class="6u$ 12u$(xsmall) work-item">
