--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 					<h2>A little about me!</h2>
 				</header>
 				<p>
-					“Seek knowledge from the cradle to the grave” Is one of the mottos that I live by; to know that there’s always something crazy to learn about is what always keeps me sane. I'm a creative guy who has a strong knack for coding, electrical and mechanical gadgets (Robots!) and a love for outer space and space exploration. I graduated from Mechanical Engineering in 2015, worked in software and machine simulation / game development and will be going back to school for a degree in Computer Science!</br>
+					“Seek knowledge from the cradle to the grave” Is one of the mottos that I live by; to know that there’s always something crazy to learn about is what always keeps me sane. I'm a creative guy who has a strong knack for coding, electrical and mechanical gadgets (Robots!) and a love for outer space and space exploration. I graduated from Mechanical Engineering in 2015 and from Computer Science in 2017, worked in software and machine simulation as well as security software and currently writing ML/AI and working with IOT at Ford.</br>
 
 					One of the coolest projects I have worked on was for a capstone graduation research project. I invented and led a team of 6 colleagues in the design and build of a one wheeled self-balancing vehicle (it can be seen on my website). This project utilized control theory in the design of lateral and longitudinal balancing systems for a one wheeled board.The main controller was an Arduino Uno that took feedback from gyroscope and accelerometer sensors on the 2 main axis based on the tilt of the board. The Arduino then corrected the angles by outputting the right amount of power to the main DC motor for the longitudinal system and the right tilt on rotating gyros for the lateral system. This project not only taught me about power distribution and programming Arduinos, but also about patience and leadership skills.
 				</p>
@@ -54,10 +54,11 @@
 				<div class="row">
 					<article class="6u$ 12u$(xsmall) work-item">
 						<ol class="icons">
-							<li>JK Rowling</li>
-							<li>Douglas Adams</li>
+							<li>Malcolm Gladwell</li>
 							<li>George Orwell</li>
 							<li>Dale Carnegie</li>
+							<li>JK Rowling</li>
+							<li>Douglas Adams</li>
 						</ol>
 					</article>
 				</div>
@@ -117,7 +118,7 @@
 					<li><a href="contact.html" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Moaaz Elsayed</li>
+					<li>&copy; Moaaz Els<a href="Moaaz Elsayed Resume.pdf" >a</a>yed</li>
 				</ul>
 			</div>
 		</footer>
