--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<h2>Where do I start?<br />
 					Well, When I was born...</h2>
 				</header>
-				<p>When I was born, in the great and majestic mountains of Tuholok, a very unique and magical phenomenon occurred; It was foretold that it only happened once in a million years, when a gifted child is born. Unfortunately, that gifted child was my neighbor who was also born on the same day. Jokes and stories aside, I'm a normal (somewhat creative) guy who has a strong knack for electrical &amp; mechanical gadgets (Robots!) and a love for outer space and space exploration. Growing up, I always wondered how things were made from radios to microwaves, which resulted in almost every object in my house taken apart and (and some) put back together... most of the time without the slightest clue of how it works. As I got older I got introduced to the all famous "Interwebs" and online tutorials which helped in the advancement of my knowledge of how things worked and their creation. Anyways, without me blabbing too much, I've listed some of my creations below. Check them out! 
+				<p>When I was born, in the great and majestic mountains of Tuholok, a very unique and magical phenomenon occurred; It was foretold that it only happened once in a million years, when a gifted child is born. Unfortunately, that gifted child was my neighbor who was also born on the same day. Jokes and stories aside, I'm a normal (somewhat creative) guy who has a strong knack for electrical &amp; mechanical gadgets (Robots!) and a love for outer space and space exploration. Most of all, I love to write code... clean, fast, code. A close friend of mine, that first introduced me to programming, said it was the closest thing to magic, that still holds true for me until today. Anyways, without me blabbering too much, I've listed some of my projects below. Check them out! 
 					<ul class="actions">
 						<li><a href="about.html" class="button">More about me...</a></li>
 					</ul>
@@ -45,6 +45,42 @@
 				<section id="two">
 					<h2>Projects!</h2>
 					<div class="row">
+						<article class="6u 12u$(xsmall) work-item">
+							<a href="images/fulls/com.jpg" class="image fit thumb"><img src="images/thumbs/com.jpg" alt="" /></a>
+							<h3>WinHacks Hackathon</h3>
+							<p>Won <b>1st place</b> in Windsor's 1st Hackathon. Led a team in developing an application for elderly people as well as people “At-Risk” to make requests for essential needs in a pandemic. These requests will then be fulfilled by workers picking up groceries/medicine and dropping them off for contactless pickup.. Devpost link <a href="https://devpost.com/software/wehelp-5vpzw9"><b>here</b></a>. Here's a short <a href="https://www.youtube.com/watch?v=tAAGhtddGFU"><b>video</b></a> as well!
+							</p>
+						</article>
+						<article class="6u 12u$(xsmall) work-item">
+							<a href="images/fulls/brail.jpg" class="image fit thumb"><img src="images/thumbs/brail.jpg" alt="" /></a>
+							<h3>PC Hacks (University of Toronto Hackathon)</h3>
+							<p>Won <b>1st place</b> (Best use of robotics/hardware) in Toronto's regional Hackathon. Led a team to create a brail printer that uses motors on 3 axis to poke coordinated holes into paper making brail letters. The printer was built using items bought from the dollar store. An Arduino microcontroller was used to receive sentences and coordinate the motors to print the sentences in brail. Devpost website can be found <a href="https://devpost.com/software/braille-printer-r81uo9"><b>here</b></a>. Check out the code <a href="https://github.com/serenityvr/SerenityVRProject1"><b>here</b></a>. Here's a short <a href="Serenity.mp4"><b>video</b></a> as well!
+							</p>
+						</article>
+						<article class="6u 12u$(xsmall) work-item">
+							<a href="images/fulls/ai.jpg" class="image fit thumb"><img src="images/thumbs/ai.jpg" alt="" /></a>
+							<h3>Deep Learning &amp; Reinforcement Learning AI Projects</h3>
+							<p>Created several mini projects using OpenCV and TensorFlow libraries in Python. Used OpenAI Gym with TensorFlow to create and test a Reinforcement Learning model on a pole-balancing game. Created an object recognition program that recognized and counted fish using OpenCV.
+							</p>
+						</article>
+						<article class="6u 12u$(xsmall) work-item">
+							<a href="images/fulls/bc.jpg" class="image fit thumb"><img src="images/thumbs/bc.jpg" alt="" /></a>
+							<h3>Ford Blockchain Hackathon</h3>
+							<p>Led team in the build of Ford Connected Ecosystem for a Blockchain competition. This is a system that uses the concept of Multi-Signature Wallet to verify the authenticity of the source of information/ notification and the ledger to track these notifications. Developed program in Solidity.
+							</p>
+						</article>
+						<article class="6u 12u$(xsmall) work-item">
+							<a href="images/fulls/td.jpg" class="image fit thumb"><img src="images/thumbs/td.jpg" alt="" /></a>
+							<h3>Cisco Fintech Hackathon (Top 10 finalists)</h3>
+							<p>Led team in the build of a promise-tracking system called TrusTD. It is a service that tracks and resolves IOU promises through a ledger to help eliminate micro transactions. It incorporates IoT to suggest the right time and place to pay for any unresolved promises.
+							</p>
+						</article>
+						<article class="6u 12u$(xsmall) work-item">
+							<a href="images/fulls/th.jpg" class="image fit thumb"><img src="images/thumbs/th.jpg" alt="" /></a>
+							<h3>Hack the North Hackathon (Bloomberg ‘Best App’ Mini Prize)</h3>
+							<p>Helped create app named Tim\'s in the Middle. This app uses geolocation to find a midpoint between multiple locations which it then uses to locate the nearest Tim Horton\'s. It's ideal for arranging group meetings, setting up Kijiji/craigslist meet-ups, and all the other miscellaneous activities which require a non-formal meeting place.
+							</p>
+						</article>
 						<article class="6u 12u$(xsmall) work-item">
 							<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 							<h3>NASA SpaceApps Challenge - Serenity VR</h3>
@@ -82,10 +118,10 @@
 								business plan, and overall company structure.
 							</p>
 						</article>
-						<article class="6u$ 12u$(xsmall) work-item">
-							<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-							<h3>Quick Coffee Portable coffee maker</h3>
-							<p> Team won <b>Viewers Choice Award</b> in the <b>BlueSky Competition</b>. Quick Coffee is a portable electric hot drink maker that can produce a hot beverage within minutes. It will provide coffee or any other hot beverage to go as long as water and coffee/pods pods are available. Check out the news page <a href="http://www.epicentreuwindsor.ca/2015-uwill-discover-undergraduate-research-conference-winners/"><b>here</b></a>. And our youtube <a href="https://www.youtube.com/watch?v=NOEuq_EK020"><b>here</b></a>.
+						<article class="6u 12u$(xsmall) work-item">
+							<a href="images/fulls/09.jpg" class="image fit thumb"><img src="images/thumbs/09.JPG" alt="" /></a>
+							<h3>Innovation Design Project</h3>
+							<p>	In this project, an innovative/ cheap/ green trashcan had to be designed. This project included designing each component and their manufacturing system as well as their impact on different markets as well as the environment.
 							</p>
 						</article>
 						<article class="6u 12u$(xsmall) work-item">
@@ -97,25 +133,25 @@
 							</p>
 						</article>
 						<article class="6u$ 12u$(xsmall) work-item">
-							<a href="images/fulls/10.jpg" class="image fit thumb"><img src="images/thumbs/10.jpg" alt="" /></a>
+							<a href="images/fulls/11.jpg" class="image fit thumb"><img src="images/thumbs/11.jpg" alt="" /></a>
 							<h3>Mechatronics Autonomus Track Race</h3>
 							<p>Tied <b>1st Place</b> in a class wide competition. This project required the design and build of an autonomus vehicle programmed with PBASIC on a STAMP BS2.
 							</p>
 						</article>
-						<article class="6u 12u$(xsmall) work-item">
-							<a href="images/fulls/09.jpg" class="image fit thumb"><img src="images/thumbs/09.JPG" alt="" /></a>
-							<h3>Innovation Design Project</h3>
-							<p>	In this project, an innovative/ cheap/ green trashcan had to be designed. This project included designing each component and their manufacturing system as well as their impact on different markets as well as the environment.
+						<article class="6u$ 12u$(xsmall) work-item">
+							<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
+							<h3>Quick Coffee Portable coffee maker</h3>
+							<p> Team won <b>Viewers Choice Award</b> in the <b>BlueSky Competition</b>. Quick Coffee is a portable electric hot drink maker that can produce a hot beverage within minutes. It will provide coffee or any other hot beverage to go as long as water and coffee/pods pods are available. Check out the news page <a href="http://www.epicentreuwindsor.ca/2015-uwill-discover-undergraduate-research-conference-winners/"><b>here</b></a>. And our youtube <a href="https://www.youtube.com/watch?v=NOEuq_EK020"><b>here</b></a>.
 							</p>
 						</article>
 						<article class="6u$ 12u$(xsmall) work-item">
-							<a href="images/fulls/10.jpg" class="image fit thumb"><img src="images/thumbs/10.jpg" alt="" /></a>
+							<a href="images/fulls/13.jpg" class="image fit thumb"><img src="images/thumbs/13.jpg" alt="" /></a>
 							<h3>Dynamics Catapult Project</h3>
 							<p>	This project required the design and construction of a catapult that would be able to shoot a rubber ball to certain distances. It was solely built out of glue, string and Popsicle sticks. The Objective of this project was to apply the concept of projectile motion to a real life application.
 							</p>
 						</article>
 						<article class="6u 12u$(xsmall) work-item">
-							<a href="images/fulls/10.jpg" class="image fit thumb"><img src="images/thumbs/10.jpg" alt="" /></a>
+							<a href="images/fulls/12.jpg" class="image fit thumb"><img src="images/thumbs/12.jpg" alt="" /></a>
 							<h3>Humanoid Robotics Race</h3>
 							<p>	The construct of this competition was to build a humanoid robot out of different parts using an echolocation device, color recognition device, touch sensor and servos. This robot was then programmed and later used in a campus wide competition.
 							</p>
@@ -175,6 +211,15 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+			<!-- Global site tag (gtag.js) - Google Analytics -->
+			<script async src="https://www.googletagmanager.com/gtag/js?id=G-7SX3K7WXE7"></script>
+			<script>
+			  window.dataLayer = window.dataLayer || [];
+			  function gtag(){dataLayer.push(arguments);}
+			  gtag('js', new Date());
+
+			  gtag('config', 'G-7SX3K7WXE7');
+			</script>
 
 		</body>
-		</html>
+	</html>
