--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
 							<p>Helped create app named Tim\'s in the Middle. This app uses geolocation to find a midpoint between multiple locations which it then uses to locate the nearest Tim Horton\'s. It's ideal for arranging group meetings, setting up Kijiji/craigslist meet-ups, and all the other miscellaneous activities which require a non-formal meeting place.
 							</p>
 						</article>
+
+
 						<article class="6u 12u$(xsmall) work-item">
 							<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 							<h3>NASA SpaceApps Challenge - Serenity VR</h3>
@@ -95,18 +97,11 @@
 								wheeled board. Team consisted of 6 members from different faculties to accomplish this task. Check out my code <a href="https://github.com/moaazelsayed/Unibo"><b>here</b></a>.
 							</p>
 						</article>
+
 						<article class="6u 12u$(xsmall) work-item">
 							<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 							<h3>PID Controller for aircraft (Navion)</h3>
 							<p>Group won <b>3rd place</b> in a class wide project competition. The main objective of this project was the development of a controller for an aircraft autopilot system. This includes the detailing, design, analysis, and simulation of the system through MatLab's Simulink.
-							</p>
-						</article>
-						<article class="6u$ 12u$(xsmall) work-item">
-							<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-							<h3>Windsor Engineering Competition - Impact Structure</h3>
-							<p>Group won <b>1st Place</b>. Went on to <b>Province Wide Competition</b>. In this competition, engineering students are faced with several real world engineering problems that range from bridge construction, displacement of fluids under certain conditions, to the design and building of a
-								front-end vehicle impact system. Students are then forced to use engineering concepts to build devices
-								that would incorporate solutions.
 							</p>
 						</article>
 						<article class="6u 12u$(xsmall) work-item">
@@ -118,6 +113,7 @@
 								business plan, and overall company structure.
 							</p>
 						</article>
+
 						<article class="6u$ 12u$(xsmall) work-item">
 							<a href="images/fulls/13.jpg" class="image fit thumb"><img src="images/thumbs/13.jpg" alt="" /></a>
 							<h3>Dynamics Catapult Project</h3>
@@ -132,6 +128,7 @@
 								competition involving different obstacles. A plaque was received for extraordinary work.
 							</p>
 						</article>
+
 						<article class="6u$ 12u$(xsmall) work-item">
 							<a href="images/fulls/11.jpg" class="image fit thumb"><img src="images/thumbs/11.jpg" alt="" /></a>
 							<h3>Mechatronics Autonomus Track Race</h3>
@@ -144,19 +141,33 @@
 							<p> Team won <b>Viewers Choice Award</b> in the <b>BlueSky Competition</b>. Quick Coffee is a portable electric hot drink maker that can produce a hot beverage within minutes. It will provide coffee or any other hot beverage to go as long as water and coffee/pods pods are available. Check out the news page <a href="http://www.epicentreuwindsor.ca/2015-uwill-discover-undergraduate-research-conference-winners/"><b>here</b></a>. And our youtube <a href="https://www.youtube.com/watch?v=NOEuq_EK020"><b>here</b></a>.
 							</p>
 						</article>
+
 						<article class="6u 12u$(xsmall) work-item">
 							<a href="images/fulls/09.jpg" class="image fit thumb"><img src="images/thumbs/09.JPG" alt="" /></a>
 							<h3>Innovation Design Project</h3>
 							<p>	In this project, an innovative/ cheap/ green trashcan had to be designed. This project included designing each component and their manufacturing system as well as their impact on different markets as well as the environment.
 							</p>
 						</article>
-						
 						<article class="6u 12u$(xsmall) work-item">
 							<a href="images/fulls/12.jpg" class="image fit thumb"><img src="images/thumbs/12.jpg" alt="" /></a>
 							<h3>Humanoid Robotics Race</h3>
 							<p>	The construct of this competition was to build a humanoid robot out of different parts using an echolocation device, color recognition device, touch sensor and servos. This robot was then programmed and later used in a campus wide competition.
 							</p>
 						</article>
+
+						<article class="6u$ 12u$(xsmall) work-item">
+							<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+							<h3>Windsor Engineering Competition - Impact Structure</h3>
+							<p>Group won <b>1st Place</b>. Went on to <b>Province Wide Competition</b>. In this competition, engineering students are faced with several real world engineering problems that range from bridge construction, displacement of fluids under certain conditions, to the design and building of a front-end vehicle impact system. Students are then forced to use engineering concepts to build devices that would incorporate solutions.
+							</p>
+						</article>
+						<article class="6u$ 12u$(xsmall) work-item">
+							<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+							<h3>Hack Harvard Hackathon (Solution Featured in Microsoft Blog)</h3>
+							Helped create a Microsoft HoloLens shopping application named ShopLens. This application enables users to shop through an augmented reality environment. It uses voice recognition and cognitive services to recognize a product then uses Walmart’s API to pull information and pricing while showing products to users in real time. Azure services connectivity solution featured on Microsoft Blog.
+							</p>
+						</article>
+
 					</div>
 						<!--
 						<ul class="actions">
