added image link

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 							</p>
 						</article>
 						<article class="6u$ 12u$(xsmall) work-item">
-							<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+							<a href="images/fulls/sl.jpg" class="image fit thumb"><img src="images/thumbs/sl.jpg" alt="" /></a>
 							<h3>Hack Harvard Hackathon (Solution Featured in Microsoft Blog)</h3>
 							Helped create a Microsoft HoloLens shopping application named ShopLens. This application enables users to shop through an augmented reality environment. It uses voice recognition and cognitive services to recognize a product then uses Walmart’s API to pull information and pricing while showing products to users in real time. Azure services connectivity solution featured on Microsoft Blog.
 							</p>
